# Data-Engineering-Projects

./: LICENSE  README.md  readme.md
API integration and Data Pipeline/section1/: Dockerfile  Makefile  README.md  check.ipynb  pyproject.toml
API integration and Data Pipeline/section1/src/: config.py  main.py
API integration and Data Pipeline/section1/src/clients/: frankfurter_client.py  polygon_client.py
API integration and Data Pipeline/section1/src/loaders/: duckdb_loader.py
API integration and Data Pipeline/section1/src/sql/: dw_schema_duckdb.sql
API integration and Data Pipeline/section1/src/utils/: logging.py
API integration and Data Pipeline/section1/tests/: test_clients.py  test_transform.py
Apache Airflow ETL Remodeling/: README.md
Apache Airflow ETL Remodeling/src/dags/: increment_dag.py  original_tables_dag.py  source_tables_dag.py
Cleaning Bank Marketing Campaign Data/: bank-marketing-data-preparation.ipynb  readme.md
Data Lake Project/: .gitignore  README.md  useful_info.md
Data Lake Project/src/dags/: dag.py
Data Warehouse Remodeling/: README.md
Marketing Data Model/section2/: README.md
Multiple Sources Data Warehouse/: .gitignore  README.md  api_entities.md  docker-compose.yml
Multiple Sources Data Warehouse/documentation/: DWH_schema.md
RFM Analysis/: README.md
Restaurant Subscriber Streaming Service/: README.md
Streaming Data Archinecture/section3/: README.md
Vertica Data Warehouse/: .dockerignore  .gitignore  README.md  dds_data_analysis.md  docker-compose.yml  staging_data_analysis.md
(+96 files in other folders)
