[tool.poetry]
name = "stocks-fx-pipeline"
version = "0.1.0"
description = "ETL: Polygon (stocks) + Frankfurter (FX) -> DW enabling currency-converted stock analysis"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.7.0"
requests = "^2.32.0"
tenacity = "^8.2.3"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
duckdb = "^1.0.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240622"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"
